--- a/cars.ipynb
+++ b/cars.ipynb
@@ -13,7 +13,8 @@
     "import missingno as msno\n",
     "import regex as re\n",
     "from sklearn.model_selection import train_test_split\n",
-    "from sklearn import preprocessing,model_selection,linear_model\n"
+    "from sklearn import preprocessing,model_selection,linear_model\n",
+    "from sklearn.metrics import r2_score"
    ]
   },
   {
